@@ -1,3 +1,6 @@
+2011-09-22
+ * initHardware method
+
 2011-09-10
  * moved to .so libraries
 
